--- a/trunk/src/timeline_test.html
+++ b/trunk/src/timeline_test.html
@@ -10,12 +10,10 @@ found in the LICENSE file.
 <link rel="stylesheet" href="overlay.css">
 <link rel="stylesheet" href="timeline_view.css">
 <link rel="stylesheet" href="timeline.css">
-<link rel="stylesheet" href="../shared/css/tabs.css">
 <script src="http://closure-library.googlecode.com/svn/trunk/closure/goog/base.js"></script>
-<script src="../shared/js/cr.js"></script>
-<script src="../shared/js/cr/event_target.js"></script>
-<script src="../shared/js/cr/ui.js"></script>
-<script src="../shared/js/cr/ui/tabs.js"></script>
+<script src="base.js"></script>
+<script src="event_target.js"></script>
+<script src="ui.js"></script>
 <script src="overlay.js"></script>
 <script src="measuring_stick.js"></script>
 <script src="profiling_view.js"></script>
