--- a/trunk/src/timeline_track_test.html
+++ b/trunk/src/timeline_track_test.html
@@ -25,10 +25,9 @@ found in the LICENSE file.
 
 </style>
 <link rel="stylesheet" href="timeline.css">
-<script src="../shared/js/cr.js"></script>
-<script src="../shared/js/cr/event_target.js"></script>
-<script src="../shared/js/cr/ui.js"></script>
-<script src="../shared/js/util.js"></script>
+<script src="base.js"></script>
+<script src="event_target.js"></script>
+<script src="ui.js"></script>
 <script src="timeline_model.js"></script>
 <script src="sorted_array_utils.js"></script>
 <script src="measuring_stick.js"></script>
