--- a/trunk/src/kernel_trace_viewer.html
+++ b/trunk/src/kernel_trace_viewer.html
@@ -9,10 +9,9 @@ found in the LICENSE file.
 <title>Interactive Timeline Tests</title>
 <link rel="stylesheet" href="timeline.css">
 <link rel="stylesheet" href="timeline_view.css">
-<script src="../shared/js/cr.js"></script>
-<script src="../shared/js/cr/event_target.js"></script>
-<script src="../shared/js/cr/ui.js"></script>
-<script src="../shared/js/util.js"></script>
+<script src="base.js"></script>
+<script src="event_target.js"></script>
+<script src="cr/ui.js"></script>
 <script src="timeline_model.js"></script>
 <script src="linux_perf_importer.js"></script>
 <script src="trace_event_importer.js"></script>
@@ -77,7 +76,7 @@ found in the LICENSE file.
     m.importEvents(traceEventData, true, [linuxPerfData]);
 
     timelineViewEl = document.querySelector('.view');
-    cr.ui.decorate(timelineViewEl, tracing.TimelineView);
+    base.ui.decorate(timelineViewEl, tracing.TimelineView);
     timelineViewEl.model = m;
     timelineViewEl.tabIndex = 1;
     timelineViewEl.timeline.focusElement = timelineViewEl;
