--- a/trunk/src/linux_perf_importer_test.html
+++ b/trunk/src/linux_perf_importer_test.html
@@ -10,8 +10,8 @@ found in the LICENSE file.
 <script src=
     "http://closure-library.googlecode.com/svn/trunk/closure/goog/base.js">
 </script>
-<script src="../shared/js/cr.js"></script>
-<script src="../shared/js/cr/event_target.js"></script>
+<script src="base.js"></script>
+<script src="event_target.js"></script>
 <script src="test_utils.js"></script>
 <script src="timeline_model.js"></script>
 <script src="linux_perf_importer.js"></script>
