--- a/trunk/src/overlay_test.html
+++ b/trunk/src/overlay_test.html
@@ -9,8 +9,8 @@ found in the LICENSE file.
 <title>Overlay tests</title>
 <link rel="stylesheet" href="overlay.css">
 <script src="http://closure-library.googlecode.com/svn/trunk/closure/goog/base.js"></script>
-<script src="../shared/js/cr.js"></script>
-<script src="../shared/js/cr/ui.js"></script>
+<script src="base.js"></script>
+<script src="ui.js"></script>
 <script src="overlay.js"></script>
 <script>
 
