--- a/trunk/src/tracing.html
+++ b/trunk/src/tracing.html
@@ -30,20 +30,13 @@ body {
 }
 
 </style>
-<link rel="stylesheet" href="tracing/overlay.css">
-<link rel="stylesheet" href="tracing/profiling_view.css">
-<link rel="stylesheet" href="tracing/timeline_analysis.css">
-<link rel="stylesheet" href="tracing/timeline_view.css">
-<link rel="stylesheet" href="tracing/timeline.css">
-<link rel="stylesheet" href="tracing/tracing_controller.css">
-<link rel="stylesheet" href="chrome://resources/css/tabs.css">
+<link rel="stylesheet" href="overlay.css">
+<link rel="stylesheet" href="profiling_view.css">
+<link rel="stylesheet" href="timeline_analysis.css">
+<link rel="stylesheet" href="timeline_view.css">
+<link rel="stylesheet" href="timeline.css">
+<link rel="stylesheet" href="tracing_controller.css">
 <link rel="stylesheet" href="chrome://resources/css/widgets.css">
-<script src="chrome://resources/js/cr.js"></script>
-<script src="chrome://resources/js/cr/event_target.js"></script>
-<script src="chrome://resources/js/cr/ui.js"></script>
-<script src="chrome://resources/js/cr/ui/focus_outline_manager.js"></script>
-<script src="chrome://resources/js/cr/ui/tabs.js"></script>
-<script src="chrome://resources/js/util.js"></script>
 <script src="chrome://tracing/tracing.js"></script>
 <script src="chrome://tracing/strings.js"></script>
 </head>
