Replace closure unit tests with a standalone test harness.
Review URL: https://codereview.appspot.com/6308063

--- a/trunk/src/overlay_test.html
+++ b/trunk/src/overlay_test.html
@@ -8,14 +8,12 @@ found in the LICENSE file.
 <head>
 <title>Overlay tests</title>
 <link rel="stylesheet" href="overlay.css">
-<script src="http://closure-library.googlecode.com/svn/trunk/closure/goog/base.js"></script>
 <script src="base.js"></script>
+<script src="unittest.js"></script>
 <script src="ui.js"></script>
 <script src="overlay.js"></script>
 <script>
-
-goog.require('goog.testing.jsunit');
-
+  unittest.runAllTests();
 </script>
 
 </head>
