--- a/trunk/src/linux_perf_importer_test.html
+++ b/trunk/src/linux_perf_importer_test.html
@@ -7,16 +7,14 @@ found in the LICENSE file.
 -->
 <head>
 <title>LinuxPerfImporter tests</title>
-<script src=
-    "http://closure-library.googlecode.com/svn/trunk/closure/goog/base.js">
-</script>
 <script src="base.js"></script>
+<script src="unittest.js"></script>
 <script src="event_target.js"></script>
 <script src="test_utils.js"></script>
 <script src="timeline_model.js"></script>
 <script src="linux_perf_importer.js"></script>
 <script>
-  goog.require('goog.testing.jsunit');
+  unittest.runAllTests();
 </script>
 
 </head>
