Change around the way the TestError constructor is written so that messages are picked up.
TBR=nduca@chromium.org

Review URL: https://codereview.appspot.com/6308088

--- a/trunk/src/unittest_test.html
+++ b/trunk/src/unittest_test.html
@@ -303,6 +303,17 @@ function testTestRunnerAllPassed() {
   rawAssertEquals(0, stats.numTestsWithErrors);
 }
 
+function testTestErrorConstruction() {
+  var err = new unittest.TestError();
+  rawAssertTrue(err instanceof Error);
+  rawAssertTrue(err.stack);
+
+  var err = new unittest.TestError("foo");
+  rawAssertTrue(err instanceof Error);
+  rawAssertTrue(err.stack);
+  rawAssertEquals('foo', err.message);
+}
+
 function testTestRunnerOneFailed() {
   var runner = new HTMLTestRunner('foo');
   var test1 = new TestCase(function() {
