Its time that timeline UI gets some well-deserved polish. Tweaks included in this patch: 1. Make title not selectable 2. Remove the global * { } rules in tracing.html so that tests agree on what about:tracing sees 3. Fix up cursor over analysis window and controls area 4. Tweak TimelineView padding so that things dont feel squeezed on left and right side of screen 5. Fix up control bar sizing so everything is the same size up top 6. Use a few hidden classnames in AnalysisResults to reduce amount of table styling required for each table subtype 7. Use bgcolors on key elements in the ui based on the styles in devtools 8. Introduces a temporary drag handle so that I can do the css styling. We can replace this with Kass' real ruler implementation when her patch lands 9. Use alternating shades on analysis table rows 10. Fix to canvas' size detection to take into account its container's padding and border sizes
Picture of results here:
http://dl.dropbox.com/u/58819336/new_tracing_skin.jpg

Review URL: https://codereview.appspot.com/6308082

--- a/trunk/src/interactive_tests.html
+++ b/trunk/src/interactive_tests.html
@@ -73,6 +73,8 @@ found in the LICENSE file.
     var containerEl = document.createElement('div');
     containerEl.tabIndex = 0;
     containerEl.style.border = '1px solid red';
+    containerEl.style.display = '-webkit-box';
+    containerEl.style.maxHeight = '800px';
 
     var timelineViewEl = document.createElement('div');
     base.ui.decorate(timelineViewEl, tracing.TimelineView);
