--- a/trunk/src/tracing.html
+++ b/trunk/src/tracing.html
@@ -7,26 +7,15 @@ found in the LICENSE file.
 -->
 <head i18n-values="dir:textdirection;">
 <style>
-* {
-  box-sizing: border-box;
-  -webkit-user-select: none;
-}
-
-html, body, #main-tabs {
+html, body {
   height: 100%;
 }
 
 body {
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  cursor: default;
-  font-family: sans-serif;
-  padding: 0;
+  padding: 0px;
   margin: 0;
-}
-
-#tracing-title {
-  margin: 1px;
 }
 
 </style>
