--- a/trunk/src/timeline_view_test.html
+++ b/trunk/src/timeline_view_test.html
@@ -98,22 +98,22 @@ found in the LICENSE file.
      * to help with non-unittest UI work.
      */
     function testInstantiateTimelineView() {
-      var events = [
-        {name: 'a', args: {}, pid: 52, ts: 520, cat: 'foo', tid: 53, ph: 'B'},
-        {name: 'a', args: {}, pid: 52, ts: 560, cat: 'foo', tid: 53, ph: 'E'},
-        {name: 'b', args: {}, pid: 52, ts: 629, cat: 'foo', tid: 53, ph: 'B'},
-        {name: 'b', args: {}, pid: 52, ts: 631, cat: 'foo', tid: 53, ph: 'E'},
-        {name: 'a', args: {}, pid: 52, ts: 640, cat: 'foo', tid: 53, ph: 'B'},
-        {name: 'a', args: {}, pid: 52, ts: 700, cat: 'foo', tid: 53, ph: 'E'},
-        {name: 'a', args: {}, pid: 52, ts: 710, cat: 'foo', tid: 53, ph: 'B'},
-        {name: 'a', args: {}, pid: 52, ts: 740, cat: 'foo', tid: 53, ph: 'E'},
+      var events = [];
+      var num_tests = 50;
+      var testIndex = 0;
+      for(testIndex = 0; testIndex < num_tests; ++testIndex){
+        var startTime = 500 + Math.random()*300;
+        var endTime = startTime + Math.random()*300;
+        events.push({name: 'a'+testIndex, args: {}, pid: testIndex, ts: startTime, cat: 'foo', tid: 53, ph: 'B'});
+        events.push({name: 'a'+testIndex, args: {}, pid: testIndex, ts: endTime, cat: 'foo', tid: 53, ph: 'E'});
+      }
+      // Add a known problematic piece of data to test the import errors UI.
+      events.push({ph: 'Z'});
 
-        // Add a known problematic piece of data to test the import errors UI.
-        {ph: 'Z'}
-      ];
       var model = new tracing.TimelineModel();
       model.importEvents(events);
       var view = new tracing.TimelineView();
+      view.style.height = '400px';
       view.model = model;
       view.tabIndex = 0;
       view.focusElement = view;
