Add drag handle to timeline analysis.
BUG=18

Review URL: https://codereview.appspot.com/6294058

--- a/trunk/src/timeline_view_test.html
+++ b/trunk/src/timeline_view_test.html
@@ -35,6 +35,7 @@ found in the LICENSE file.
   .timeline-view {
     border: 1px solid black;
     margin: 10px;
+    height: 350px;
   }
   .timeline-find-dialog {
     border: 1px solid black;
