--- a/trunk/src/linux_perf_importer_test.html
+++ b/trunk/src/linux_perf_importer_test.html
@@ -20,8 +20,8 @@ found in the LICENSE file.
 </head>
 <body>
 <script>
-function testLineRE33() {
-  var re = tracing._LinuxPerfImporterTestExports.lineRE33;
+function testLineRE() {
+  var re = tracing._LinuxPerfImporterTestExports.lineRE;
   var x = re.exec('   <idle>-0     [001]  4467.843475: sched_switch: ' +
       'prev_comm=swapper prev_pid=0 prev_prio=120 prev_state=R ==> ' +
       'next_comm=SurfaceFlinger next_pid=178 next_prio=112');
@@ -39,8 +39,8 @@ function testLineRE33() {
   assertNotNull(x);
 }
 
-function testLineRE34() {
-  var re = tracing._LinuxPerfImporterTestExports.lineRE34;
+function testLineREWithIRQInfo() {
+  var re = tracing._LinuxPerfImporterTestExports.lineREWithIRQInfo;
   var x = re.exec('     systrace.sh-5441  [001] d...  1031.091570: ' +
         'sched_wakeup: comm=debugd pid=4978 prio=120 success=1 target_cpu=000');
   assertNotNull(x);
@@ -49,6 +49,16 @@ function testLineRE34() {
   assertEquals('1031.091570', x[3]);
   assertEquals('sched_wakeup', x[4]);
   assertEquals('comm=debugd pid=4978 prio=120 success=1 target_cpu=000', x[5]);
+}
+ 
+function testAutodetectLineCornerCases() {
+  var line = 'systrace.sh-8170  [001] 15180.978813: sched_switch: ' +
+             'prev_comm=systrace.sh prev_pid=8170 prev_prio=120 ' +
+             'prev_state=x ==> next_comm=kworker/1:0 next_pid=7873 ' +
+             'next_prio=120';
+  var autoLineRE = tracing._LinuxPerfImporterTestExports.autoDetectLineRE(line);
+  var lineRE = tracing._LinuxPerfImporterTestExports.lineRE;
+  assertEquals(autoLineRE, lineRE, 'Mis-detected line format without IRQ info');
 }
 
 function testSchedSwitchRE() {
