Make TestError instanceof Error
This was supposed to be the case by design. However, the code itself
was mistakenly assigning the TestError prototype to Error, instead of
to the newly created instance.

Review URL: https://codereview.appspot.com/6326043

--- a/trunk/src/unittest_test.html
+++ b/trunk/src/unittest_test.html
@@ -305,10 +305,12 @@ function testTestRunnerAllPassed() {
 
 function testTestErrorConstruction() {
   var err = new unittest.TestError();
+  rawAssertTrue(err instanceof unittest.TestError);
   rawAssertTrue(err instanceof Error);
   rawAssertTrue(err.stack);
 
   var err = new unittest.TestError("foo");
+  rawAssertTrue(err instanceof unittest.TestError);
   rawAssertTrue(err instanceof Error);
   rawAssertTrue(err.stack);
   rawAssertEquals('foo', err.message);
